# AutoGemini

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
src/autogemini/: __init__.py  __main__.py  auto.py  auto_stream_processor.py  gemini_chat.py  main.py  template.py  tool_code.py
tests/: keys.json.example  run_interactive_test.py  test_stream_chat.py  test_template.py
