[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogemini"
version = "0.1.1"
description = "AutoGemini - 流式Gemini API处理系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "httpx>=0.25.0",
    "requests>=2.32.4",
    # 兼容 pyppeteer、google-genai、autogemini 三者
    "websockets>=10.0,<11.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autogemini"]
