[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogemini"
version = "0.1.7"
description = "AutoGemini - 流式Gemini API处理系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "build>=1.2.2.post1",
    "google-generativeai>=0.8.5",
    "websockets>=10.0,<11.0",
]
authors = [{ name = "sjrsjz", email = "sjrsjz@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autogemini"]

[dependency-groups]
dev = ["pytest-asyncio>=1.3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
